# determination-of-the-phase-of-the-metering-device

./: README.md
determination_of_the_phase_of_the_metering_device/: CMakeLists.txt  CMakePresets.json  PhasesToMeterToFreeRatio.csv  PhasesToMeterToSlope.csv
determination_of_the_phase_of_the_metering_device/cmake_build/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
determination_of_the_phase_of_the_metering_device/cmake_build/.cmake/api/v1/reply/: cache-v2-3f01bf0faa1f5c478e63.json  cmakeFiles-v1-1fe97ae1de5b280925f3.json  codemodel-v2-d6210eed290ffd70cee5.json  index-2024-10-01T13-11-13-0531.json  target-metering_device_phase_determination-Debug-cc260edb73a65477bbd4.json  toolchains-v1-815cc7310a4ef008ef66.json
determination_of_the_phase_of_the_metering_device/src/: MeterToVoltage.csv  PhasesToMeterToFreeRatio.csv  PhasesToMeterToSlope.csv  electricity_meter.cpp  electricity_meter.h  input_reader.cpp  input_reader.h  main.cpp  metersPQ14-12-2022.csv  meters_data.h
phasing_cmake_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  determination_of_the_phase_of_the_metering_device.sln  determination_of_the_phase_of_the_metering_device.vcxproj  phasing.sln  phasing.vcxproj  phasing.vcxproj.filters
phasing_cmake_build/Debug/: PhasesToMeterToFreeRatio.csv  PhasesToMeterToSlope.csv  metersPQ14-12-2022.csv
phasing_cmake_build/determination_of_the_phase_of_the_metering_device.dir/Debug/: determination_of_the_phase_of_the_metering_device.exe.recipe  determination_of_the_phase_of_the_metering_device.ilk
phasing_cmake_build/determination_of_the_phase_of_the_metering_device.dir/Debug/determin.3D62EF5C.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
phasing_cmake_build/phasing.dir/Debug/: phasing.exe.recipe  phasing.ilk
phasing_cmake_build/phasing.dir/Debug/phasing.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  phasing.lastbuildstate
phasing_cmake_build/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
phasing_cmake_build/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
phasing_cmake_build/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
phasing_cmake_build/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  (+3 more)
